--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: python
 python:
-  - "2.7"
+  - "3.7"
 # command to install dependencies
 install:
-  - "pip install ."
+  - "pip3 install ."
 # command to run tests
 script: make test
